tests/algorithms/x/Scala/neural_network/input_data.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/neural_network/input_data.scala:81: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[scala.math.BigInt]]
Note: Any >: scala.collection.mutable.ArrayBuffer[scala.math.BigInt], but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]`. (SLS 3.2.10)
    return BatchResult(new_ds, batch_images, batch_labels)
                               ^
/workspace/mochi/tests/algorithms/x/Scala/neural_network/input_data.scala:81: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.collection.mutable.ArrayBuffer[scala.math.BigInt]]
Note: Any >: scala.collection.mutable.ArrayBuffer[scala.math.BigInt], but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]`. (SLS 3.2.10)
    return BatchResult(new_ds, batch_images, batch_labels)
                                             ^
two errors found
